[gd_scene load_steps=18 format=3 uid="uid://brwqtg218v1k3"]

[ext_resource type="Script" path="res://scenes/entities/objects/static/Food/eating_food.gd" id="1_5n20k"]
[ext_resource type="Texture2D" uid="uid://dnbga5a23o4x5" path="res://assets/sprites/objects/throwables/food/Mushroom-Grow.png" id="1_oorxx"]
[ext_resource type="Texture2D" uid="uid://djrp2hvvp5nsx" path="res://assets/sprites/objects/throwables/food/Mushroom-Selected.png" id="2_6iat7"]
[ext_resource type="Texture2D" uid="uid://bocxbuatv3htb" path="res://assets/sprites/UI/Keycaps/Keycaps-D.png" id="4_i3jbr"]
[ext_resource type="AudioStream" uid="uid://c5irlygn28uyp" path="res://assets/soundeffects/box_drop.wav" id="5_efoko"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lggqh"]
atlas = ExtResource("1_oorxx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r06ot"]
atlas = ExtResource("1_oorxx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_grbjq"]
atlas = ExtResource("1_oorxx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueku8"]
atlas = ExtResource("1_oorxx")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe6k0"]
atlas = ExtResource("1_oorxx")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hy11"]
atlas = ExtResource("1_oorxx")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf1k8"]
atlas = ExtResource("1_oorxx")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1b2d"]
atlas = ExtResource("1_oorxx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbc7c"]
atlas = ExtResource("2_6iat7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_eu32p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lggqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r06ot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grbjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueku8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe6k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hy11")
}],
"loop": false,
"name": &"grow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf1k8")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1b2d")
}],
"loop": false,
"name": &"picked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbc7c")
}],
"loop": false,
"name": &"pickup",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nm16"]
size = Vector2(8, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_b2owp"]
radius = 9.05539

[node name="EatingFood" type="StaticBody2D" groups=["pickable"]]
script = ExtResource("1_5n20k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_eu32p")
animation = &"grow"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_7nm16")

[node name="ActionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionArea"]
shape = SubResource("CircleShape2D_b2owp")

[node name="ActionButton" type="Sprite2D" parent="."]
visible = false
position = Vector2(17, -30)
texture = ExtResource("4_i3jbr")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_efoko")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="ActionArea" to="." method="_on_action_area_body_entered"]
[connection signal="body_exited" from="ActionArea" to="." method="_on_action_area_body_exited"]
